--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ body {
   background-color: var(--off-white);
   overflow-x: hidden;
   line-height: 1.6;
+  font-size: 20px;
 }
 
 h1,
@@ -31,7 +32,8 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: "Poppins", sans-serif;
+  font-family: "EB Garamond", serif;
+
   font-weight: 600;
   line-height: 1.3;
   margin-bottom: 1rem;
@@ -329,18 +331,26 @@ section {
 
 /* About Section */
 .about {
-  background: var(--white);
+  background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.9),
+      rgba(255, 255, 255, 0.9)
+    ),
+    url("img/glasshp.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .about-content {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 4rem;
+  gap: 3rem;
   align-items: center;
 }
 
 .about-text h2 {
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 }
 
 .mission-vision {
