--- a/styles.css
+++ b/styles.css
@@ -39,9 +39,10 @@ h5 {
 }
 
 h1 {
-  font-size: 2.7rem;
+  font-size: 2.5rem;
   font-weight: 600;
   font-family: "Playfair Display", serif !important;
+  color: #ffffff !important;
 }
 
 h2 {
@@ -317,19 +318,20 @@ section {
   padding: 0 2rem;
 }
 
-.hero h1 {
-  font-size: 4rem;
+.hero-content h1 {
+  font-size: 3rem;
   margin-bottom: 1.5rem;
   line-height: 1.2;
-  color: var(--light-blue);
+  color: var(--white);
 }
 
-.hero p {
-  font-size: 1.3rem;
+.hero-content p {
+  font-size: 1.4rem;
   max-width: 600px;
   margin-bottom: 2.5rem;
-  opacity: 0.9;
-  color: var(--light-blue);
+  opacity: 1;
+  color: var(--white) !important;
+  font-family: "Cormorant Garamond", serif;
 }
 
 .hero-btns {
@@ -338,6 +340,43 @@ section {
   margin-top: 2rem;
 }
 
+@media (max-width: 768px) {
+  #home {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .hero {
+    height: 90vh;
+    min-height: 100%;
+    margin-top: 80px;
+  }
+  .hero-content {
+    max-width: 100%;
+    position: relative;
+    z-index: 2;
+    padding: 0 2rem;
+  }
+  .hero h1 {
+    font-size: 2rem !important;
+    margin-bottom: 1.5rem;
+    line-height: 1 !important;
+    color: var(--white);
+  }
+  .hero-btns {
+    display: flex;
+    gap: 1.5rem;
+    flex-wrap: wrap;
+  }
+
+  .btn {
+    display: grid;
+    place-content: center;
+    padding: 5px !important;
+    width: 250px;
+    height: auto;
+  }
+}
 /* About Section */
 .about {
   background: linear-gradient(
@@ -693,6 +732,7 @@ section {
   background: #444;
   color: var(--white);
   transition: var(--transition);
+  text-decoration: none;
 }
 
 .social-links a:hover {
@@ -791,22 +831,20 @@ section {
   display: flex;
   align-items: center;
   gap: 10px;
-  background-color: var(--accent-green);
+  background-color: var(--primary-blue);
   color: #ffffff;
   text-decoration: none;
-  font-weight: 600;
-  padding: 12px 24px;
-  border-radius: 50px;
+  font-weight: 500;
+  padding: 15px 15px;
+  border-radius: 30px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-  font-family: "Cormorant Garamond", serif;
-  font-size: 15px;
-  white-space: nowrap;
+  font-size: 17px;
 }
 
 /* WhatsApp Icon */
 .qlwapp-toggle i.fab.fa-whatsapp {
   font-size: 24px;
-  color: #fff;
+  color: var(--accent-green);
 }
 
 /* Close (×) icon */
@@ -822,6 +860,7 @@ section {
 .qlwapp-text {
   display: inline;
   white-space: nowrap;
+  font-family: Garamond, serif;
 }
 
 /* Hover Effect */
@@ -832,7 +871,7 @@ section {
 }
 
 /* Responsive Hide on Very Small Screens (Optional) */
-@media (max-width: 400px) {
+@media (max-width: 768px) {
   .qlwapp-text {
     display: none;
   }
@@ -843,6 +882,8 @@ section {
     justify-content: center;
     width: 50px;
     height: 50px;
+    font-weight: 700;
+    background-color: var(--accent-green);
   }
 }
 
@@ -862,17 +903,18 @@ section {
   justify-content: space-between;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.17);
 }
 
 .contact-column h2 {
   margin-bottom: 2rem;
   color: var(--primary-blue);
-  font-size: 1.7rem;
-  font-family: Garamond, serif;
+  font-size: 1.5rem;
+  font-family: Garamond;
 }
 .contact-column .icon {
   font-size: 1.3rem;
+  font-weight: 700;
 }
 .contact-column p,
 .contact-column label {
