--- a/styles.css
+++ b/styles.css
@@ -785,6 +785,8 @@ section {
   border-top: 1px solid #7a7777;
   color: var(--off-white);
   font-size: 1.2rem;
+  color: rgb(92, 255, 60);
+  font-weight: 600;
 }
 
 /* Responsive Design */
