--- a/styles.css
+++ b/styles.css
@@ -496,14 +496,16 @@ section {
     background-position: center;
     background-repeat: no-repeat;
     align-items: center;
+    width: 100%;
+    height: 100%;
+    padding-left: 10px;
+    padding-right: auto;
   }
 
   .about-content {
     display: grid;
     grid-template-columns: 1fr !important;
-    width: 100%;
     align-items: center;
-    height: 100%;
   }
 
   .about-text h2 {
@@ -515,7 +517,6 @@ section {
     display: grid;
     place-items: center;
     padding: 1.5rem !important;
-    border-radius: 15px;
     margin-bottom: 2rem;
     padding-left: 0;
     width: 100%;
