--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ h2 {
   font-family: "EB Garamond", serif;
 }
 
-h2:after {
+/* h2:after {
   content: "";
   position: absolute;
   bottom: -15px;
@@ -65,7 +65,7 @@ h2:after {
   height: 4px;
   background: var(--accent-green);
   border-radius: 2px;
-}
+} */
 
 .container {
   max-width: 1200px;
@@ -554,7 +554,7 @@ h2:after {
 }
 
 .program-img {
-  height: 220px;
+  height: 300px;
   background-size: cover;
   background-position: center;
 }
@@ -1122,5 +1122,116 @@ form button:hover {
   .contact-info .icon {
     flex-shrink: 0;
     margin-right: 8px;
+  }
+}
+/* Distribution Model */
+.distribution-model {
+  background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.9),
+      rgba(255, 255, 255, 0.8)
+    ),
+    url("img/eyeglass.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: repeat;
+  height: auto;
+  padding: 2rem 1.5rem;
+}
+.distribution-model h2 {
+  text-align: center;
+  font-family: Garamond, serif;
+  font-size: 2rem;
+}
+
+.distribution-steps {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 2rem;
+  margin-top: 2rem;
+}
+
+.step {
+  background: var(--light-blue);
+  padding: 1.5rem;
+  border-radius: 10px;
+  border-left: 3px solid var(--primary-blue);
+}
+.step h3 {
+  color: var(--accent-green);
+  margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  font-family: "Cormorant Garamond", serif;
+  font-size: 1.7rem;
+}
+.step-number {
+  display: inline-block;
+  background: var(--primary-blue);
+  color: white;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 30px;
+  margin-bottom: 1rem;
+}
+
+/* Glasses Info */
+.glasses-info {
+  background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.9),
+      rgba(255, 255, 255, 0.8)
+    ),
+    url("img/glas3.jpeg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: repeat;
+  height: auto;
+  padding: 2rem 1.5rem;
+}
+.glasses-info h2 {
+  text-align: center;
+  font-family: Garamond, serif;
+  font-size: 2rem;
+}
+.glasses-features {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 2rem;
+  margin-top: 2rem;
+}
+
+.feature {
+  text-align: center;
+  padding: 2rem;
+  background: var(--light-blue);
+  border-radius: 10px;
+  box-shadow: var(--box-shadow);
+}
+.feature h3 {
+  color: var(--accent-green);
+  margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  font-family: "Cormorant Garamond", serif;
+  font-size: 1.7rem;
+}
+
+.feature i {
+  font-size: 1.5rem;
+  color: var(--primary-blue);
+  margin-bottom: 1rem;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .distribution-steps {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .glasses-features {
+    flex-direction: column;
   }
 }
