--- a/styles.css
+++ b/styles.css
@@ -313,8 +313,9 @@ h2 {
       rgba(0, 87, 160, 0.3) 70%,
       rgba(46, 139, 87, 0.3) 100%
     ),
-    url("/img/Presbyopia.gif") center/cover no-repeat;
+    url("img/eyeglass.jpg") center center / cover no-repeat;
   display: flex;
+  justify-content: center;
   align-items: center;
   position: relative;
   overflow: hidden;
@@ -361,7 +362,7 @@ h2 {
     justify-content: center;
   }
   .hero {
-    height: 90vh;
+    height: 80vh;
     min-height: 100%;
     margin-top: 80px;
   }
@@ -391,6 +392,45 @@ h2 {
     height: auto;
   }
 }
+/*  this is the css for the about hero image  */
+.jumbotron {
+  height: 100vh;
+  min-height: 800px;
+  background: linear-gradient(
+      to bottom right,
+      rgba(0, 0, 0, 0.5) 0%,
+      rgba(0, 0, 0, 0.3) 40%,
+      rgba(0, 87, 160, 0.3) 70%,
+      rgba(46, 139, 87, 0.3) 100%
+    ),
+    url("img/pexels-dumitru-b-742240889-29471622.jpg") center center / cover
+      no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+  margin-top: 80px;
+}
+
+.jumbotron-content {
+  max-width: 800px;
+  position: relative;
+  z-index: 2;
+  padding: 0 2rem;
+  background: rgba(68, 65, 65, 0.3); /* optional overlay for contrast */
+  border-radius: 10px;
+}
+
+.jumbotron-content p {
+  font-size: 3rem;
+  margin-bottom: 1.5rem;
+  line-height: 1.3; /* slightly more breathing room */
+  color: var(--light-blue) !important;
+  letter-spacing: 0.5px; /* improves clarity for uppercase or bold fonts */
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4); /* improves contrast if on image/bg */
+}
+
 /* About Section */
 .about {
   background: linear-gradient(
@@ -502,7 +542,23 @@ h2 {
     height: auto;
     padding: 2rem 1.5rem;
   }
-
+  .jumbotron {
+    height: 80vh;
+    min-height: 100%;
+    margin-top: 80px;
+  }
+  .jumbotron-content {
+    max-width: 100%;
+    position: relative;
+    z-index: 2;
+    padding: 0 2rem;
+  }
+  .jumbotron-content p {
+    font-size: 2rem !important;
+    margin-bottom: 1.5rem;
+    line-height: 1 !important;
+    color: var(--white);
+  }
   .about-content {
     display: flex;
     flex-direction: column;
@@ -624,7 +680,45 @@ h2 {
   }
 }
 
-/* Gallery */
+/*  this is the css for the  Gallery  image  */
+.jumbotrong {
+  height: 100vh;
+  min-height: 800px;
+  background: linear-gradient(
+      to bottom right,
+      rgba(0, 0, 0, 0.5) 0%,
+      rgba(0, 0, 0, 0.3) 40%,
+      rgba(0, 87, 160, 0.3) 70%,
+      rgba(46, 139, 87, 0.3) 100%
+    ),
+    url("img/pexels-expect-best-79873-1035733.jpg") center center / cover
+      no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+  margin-top: 80px;
+}
+
+.jumbotron-contentg {
+  max-width: 800px;
+  position: relative;
+  z-index: 2;
+  padding: 0 2rem;
+  background: rgba(68, 65, 65, 0.3); /* optional overlay for contrast */
+  border-radius: 10px;
+}
+
+.jumbotron-contentg p {
+  font-size: 3rem;
+  margin-bottom: 1.5rem;
+  line-height: 1.3; /* slightly more breathing room */
+  color: var(--light-blue) !important;
+  letter-spacing: 0.5px; /* improves clarity for uppercase or bold fonts */
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4); /* improves contrast if on image/bg */
+}
+/*Gallery  */
 .gallery {
   background: var(--white);
   margin: 3rem auto;
@@ -668,6 +762,44 @@ h2 {
 
 .gallery-item:hover img {
   transform: scale(1.1);
+}
+/*  this is the css for the  Get Involvedhero image  */
+.jumbotron2 {
+  height: 100vh;
+  min-height: 800px;
+  background: linear-gradient(
+      to bottom right,
+      rgba(0, 0, 0, 0.5) 0%,
+      rgba(0, 0, 0, 0.3) 40%,
+      rgba(0, 87, 160, 0.3) 70%,
+      rgba(46, 139, 87, 0.3) 100%
+    ),
+    url("img/pexels-karolina-grabowska-5201991.jpg") center center / cover
+      no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+  margin-top: 80px;
+}
+
+.jumbotron-content2 {
+  max-width: 800px;
+  position: relative;
+  z-index: 2;
+  padding: 0 2rem;
+  background: rgba(68, 65, 65, 0.3); /* optional overlay for contrast */
+  border-radius: 10px;
+}
+
+.jumbotron-content2 p {
+  font-size: 3rem;
+  margin-bottom: 1.5rem;
+  line-height: 1.3; /* slightly more breathing room */
+  color: var(--light-blue) !important;
+  letter-spacing: 0.5px; /* improves clarity for uppercase or bold fonts */
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4); /* improves contrast if on image/bg */
 }
 
 /* Get Involved */
@@ -729,6 +861,23 @@ h2 {
   font-family: "Cormorant Garamond", serif;
 }
 @media (max-width: 768px) {
+  .jumbotron2 {
+    height: 80vh;
+    min-height: 100%;
+    margin-top: 80px;
+  }
+  .jumbotron-content2 {
+    max-width: 100%;
+    position: relative;
+    z-index: 2;
+    padding: 0 2rem;
+  }
+  .jumbotron-content2 p {
+    font-size: 2rem !important;
+    margin-bottom: 1.5rem;
+    line-height: 1 !important;
+    color: var(--white);
+  }
   .gallery-grid {
     display: flex;
     flex-direction: column;
@@ -742,6 +891,23 @@ h2 {
     flex-direction: column;
     align-items: center; /* center items horizontally */
     padding: 15px;
+  }
+  .jumbotrong {
+    height: 80vh;
+    min-height: 100%;
+    margin-top: 80px;
+  }
+  .jumbotron-contentg {
+    max-width: 100%;
+    position: relative;
+    z-index: 2;
+    padding: 0 2rem;
+  }
+  .jumbotron-contentg p {
+    font-size: 2rem !important;
+    margin-bottom: 1.5rem;
+    line-height: 1 !important;
+    color: var(--white);
   }
 }
 
@@ -1005,6 +1171,43 @@ h2 {
     background-color: var(--accent-green);
   }
 }
+/*  this is the css for the contact us hero image  */
+.jumbotron1 {
+  height: 100vh;
+  min-height: 800px;
+  background: linear-gradient(
+      to bottom right,
+      rgba(0, 0, 0, 0.5) 0%,
+      rgba(0, 0, 0, 0.3) 40%,
+      rgba(0, 87, 160, 0.3) 70%,
+      rgba(46, 139, 87, 0.3) 100%
+    ),
+    url("img/pexels-mota-701877.jpg") center center / cover no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+  margin-top: 80px;
+}
+
+.jumbotron-content1 {
+  max-width: 800px;
+  position: relative;
+  z-index: 2;
+  padding: 0 2rem;
+  background: rgba(68, 65, 65, 0.3); /* optional overlay for contrast */
+  border-radius: 10px;
+}
+
+.jumbotron-content1 p {
+  font-size: 3rem;
+  margin-bottom: 1.5rem;
+  line-height: 1.3; /* slightly more breathing room */
+  color: var(--light-blue) !important;
+  letter-spacing: 0.5px; /* improves clarity for uppercase or bold fonts */
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4); /* improves contrast if on image/bg */
+}
 
 /* Contact Section */
 .contact-container {
@@ -1098,6 +1301,23 @@ form button:hover {
 }
 
 @media (max-width: 768px) {
+  .jumbotron1 {
+    height: 80vh;
+    min-height: 100%;
+    margin-top: 80px;
+  }
+  .jumbotron-content1 {
+    max-width: 100%;
+    position: relative;
+    z-index: 2;
+    padding: 0 2rem;
+  }
+  .jumbotron-content1 p {
+    font-size: 2rem !important;
+    margin-bottom: 1.5rem;
+    line-height: 1 !important;
+    color: var(--white);
+  }
   .contact-container {
     flex-direction: column;
     gap: 10px;
@@ -1128,7 +1348,45 @@ form button:hover {
     flex-shrink: 0;
     margin-right: 8px;
   }
+} /*  this is the css for the  distribution-model image  */
+.jumbotrona {
+  height: 100vh;
+  min-height: 800px;
+  background: linear-gradient(
+      to bottom right,
+      rgba(0, 0, 0, 0.5) 0%,
+      rgba(0, 0, 0, 0.3) 40%,
+      rgba(0, 87, 160, 0.3) 70%,
+      rgba(46, 139, 87, 0.3) 100%
+    ),
+    url("img/pexels-murray-official-82861-255305.jpg") center center / cover
+      no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+  margin-top: 80px;
 }
+
+.jumbotron-contenta {
+  max-width: 800px;
+  position: relative;
+  z-index: 2;
+  padding: 0 2rem;
+  background: rgba(68, 65, 65, 0.3); /* optional overlay for contrast */
+  border-radius: 10px;
+}
+
+.jumbotron-contenta p {
+  font-size: 3rem;
+  margin-bottom: 1.5rem;
+  line-height: 1.3; /* slightly more breathing room */
+  color: var(--light-blue) !important;
+  letter-spacing: 0.5px; /* improves clarity for uppercase or bold fonts */
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4); /* improves contrast if on image/bg */
+}
+
 /* Distribution Model */
 .distribution-model {
   background: linear-gradient(
@@ -1142,6 +1400,7 @@ form button:hover {
   background-repeat: repeat;
   height: auto;
   padding: 2rem 1.5rem;
+  height: 100%;
 }
 .distribution-model h2 {
   text-align: center;
