--- a/styles.css
+++ b/styles.css
@@ -457,6 +457,7 @@ h2 {
 
 .about-text h2 {
   margin-bottom: 3rem;
+  padding-top: 30px;
   font-family: Garamond, serif;
 }
 .about-text h3 {
@@ -807,12 +808,14 @@ h2 {
 .get-involved {
   background: var(--off-white);
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .get-involved h2 {
   text-align: center;
   font-family: Garamond, serif;
   font-size: 2rem;
+  padding-top: 30px;
 }
 
 .get-involved h2:after {
@@ -825,6 +828,7 @@ h2 {
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 2.5rem;
   margin-top: 3rem;
+  background-color: #fffbfb;
 }
 
 .involve-card {
@@ -916,6 +920,7 @@ h2 {
   background: var(--dark-text);
   color: var(--white);
   padding: 4rem 0 2rem;
+  width: 100%;
 }
 
 .footer-content {
@@ -1212,11 +1217,12 @@ h2 {
 /* Contact Section */
 .contact-container {
   display: flex;
-  gap: 30px;
+  gap: 40px;
   flex-wrap: wrap;
   justify-content: center;
   align-items: stretch;
   margin: 3rem auto;
+  width: 100%;
 }
 
 .contact-column {
@@ -1225,8 +1231,9 @@ h2 {
   flex-direction: column;
   justify-content: space-between;
   padding: 20px;
+  background-color: #fafafa;
   border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.17);
+  box-shadow: 0 2px 5px rgba(39, 39, 39, 0.17);
 }
 
 .contact-column h2 {
@@ -1406,6 +1413,7 @@ form button:hover {
   text-align: center;
   font-family: Garamond, serif;
   font-size: 2rem;
+  padding-top: 30px;
 }
 
 .distribution-steps {
@@ -1416,10 +1424,10 @@ form button:hover {
 }
 
 .step {
-  background: var(--light-blue);
+  background: #fafafa;
   padding: 1.5rem;
   border-radius: 10px;
-  border-left: 4px solid var(--primary-blue);
+  border-left: 3px solid var(--primary-blue);
 }
 .step h3 {
   color: var(--accent-green);
