--- a/styles.css
+++ b/styles.css
@@ -56,21 +56,9 @@ h2 {
   font-family: "EB Garamond", serif;
 }
 
-/* h2:after {
-  content: "";
-  position: absolute;
-  bottom: -15px;
-  left: 0;
-  width: 70px;
-  height: 4px;
-  background: var(--accent-green);
-  border-radius: 2px;
-} */
-
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  /* padding: 0 1.5rem; */
 }
 .hero-btns {
   display: flex;
@@ -143,7 +131,7 @@ h2 {
 }
 
 .logo {
-  height: 60px; /* or your preferred height */
+  height: 70px; /* or your preferred height */
   flex: 4;
 }
 
@@ -337,10 +325,10 @@ h2 {
 .hero-content h1 {
   font-size: 3rem;
   margin-bottom: 1.5rem;
-  line-height: 1.3; /* slightly more breathing room */
+  line-height: 1.3;
   color: var(--primary-blue) !important;
-  letter-spacing: 0.5px; /* improves clarity for uppercase or bold fonts */
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4); /* improves contrast if on image/bg */
+  letter-spacing: 0.5px;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
 }
 
 .hero-content p {
@@ -350,8 +338,8 @@ h2 {
   opacity: 1;
   color: var(--off-white) !important;
   font-family: "Cormorant Garamond", serif;
-  line-height: 1.5; /* improves readability for paragraph blocks */
-  letter-spacing: 0.3px; /* gentle tracking for better eye flow */
+  line-height: 1.5;
+  letter-spacing: 0.3px;
 }
 
 .hero-btns {
@@ -1067,7 +1055,7 @@ h2 {
   }
 
   .hero h1 {
-    font-size: 2.8rem;
+    font-size: 2.7rem;
   }
 
   .hero-btns {
